# DUMB_docs

./: .gitignore  CHANGELOG.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json  init.sh
.github/: .release-please-manifest.json  dependabot.yml
.github/workflows/: deploy.yml  release-please.yaml  sync_changelog.yml
docs/: about.md  changelog.md  contributing.md  index.md
docs/api/: ai.md  auth.md  config.md  health.md  index.md  logs.md  metrics.md  notifications.md  process.md  seerr-sync.md  websocket.md  websocket_logs.md
docs/architecture/: backend.md  frontend.md  index.md  traefik.md
docs/deployment/: docker.md  dockge.md  index.md  portainer.md  proxmox.md  qnap.md  synology.md  truenas.md  unraid.md  wsl.md
docs/faq/: authentication.md  cli-debrid.md  decypharr.md  dmb.md  dumb.md  general.md  huntarr.md  neutarr.md  pgadmin.md  plex-debrid.md  plex.md  postgres.md  rclone.md  riven.md  seerr.md  tautulli.md  zilean.md  zurg.md
docs/features/: ai-assistant.md  arr-postgres-migration.md  authentication.md  auto-restart.md  auto-update.md  configuration.md  embedded-ui.md  ffprobe-monitor.md  index.md  metrics.md  notifications.md  seerr-sync.md  symlinks.md  usage.md
docs/frontend/: dashboard.md  index.md  metrics.md  onboarding.md  service-pages.md  settings.md
docs/getting-started/: index.md  installation.md
docs/reference/: config-schema.md  core-service.md  environment-variables.md  index.md  instances.md  ports.md
docs/services/: api.md  cli-battery.md  cli-debrid.md  decypharr.md  dmb-frontend.md  dumb-frontend.md  zurg.md  (+9 more)
(+42 files in other folders)
