[project]
name = "dmb-docs"
version = "1.2.2"
description = "DMB Documentaton"
authors = [
    {name = "I-am-PUID-0",email = "36779668+I-am-PUID-0@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.6.9,<10.0.0)",
    "pymdown-extensions (>=10.3,<11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
