[project]
name = "dumb-docs"
version = "1.7.2"
description = "DUMB Documentaton"
authors = [
    {name = "I-am-PUID-0",email = "36779668+I-am-PUID-0@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pymdown-extensions (>=10.3,<11.0)",
    "zensical (>=0.0.15,<0.1.0)",
    "mkdocstrings[python,shell] (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
